add images for menu data

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,3 +8,22 @@
       @apply scroll-smooth;
   }
 }
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+
+::-webkit-scrollbar-track {
+  background:transparent;
+}
+
+
+::-webkit-scrollbar-thumb {
+  background: rgb(244, 192, 21);
+
+}
+
+
+::-webkit-scrollbar-thumb:hover {
+  background: black;
+}
